# quickcheck-lockstep

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  README.md  cabal.project  quickcheck-lockstep.cabal
.github/workflows/: haskell-ci.yml  haskell.yml
scripts/: format-stylish-haskell.sh  lint-cabal.sh
src/Test/QuickCheck/StateModel/: Lockstep.hs
src/Test/QuickCheck/StateModel/Lockstep/: API.hs  Defaults.hs  EnvF.hs  GVar.hs  Op.hs  Run.hs
src/Test/QuickCheck/StateModel/Lockstep/Op/: Identity.hs  SumProd.hs
test/: Main.hs
test-internals/: Main.hs
test-internals/Test/Test/QuickCheck/StateModel/Lockstep/: GVar.hs
test/Test/: Golden.hs  IORef.hs  MockFS.hs  NonDeterminism.hs
test/Test/IORef/: Full.hs  Simple.hs
test/Test/MockFS/: Mock.hs
test/Test/NonDeterminism/: Example.hs
test/golden/: golden_failure_default_propLockstep_MockFS.golden  golden_failure_nonVerbose_propLockstep_MockFS.golden  golden_failure_verbose_propLockstep_MockFS.golden  golden_success_propLockstep_MockFS.golden
tmp/: README.md
