cabal-version:      2.4
name:               quickcheck-lockstep
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
extra-source-files: CHANGELOG.md

common lang
  default-language:
      Haskell2010
  default-extensions:
      FlexibleContexts
      FlexibleInstances
      GADTs
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TypeApplications
      TypeFamilies
  other-extensions:
      UndecidableInstances
  ghc-options:
      -Wall
      -Wprepositive-qualified-module
      -Wredundant-constraints

library
  import:
      lang
  exposed-modules:
      Test.QuickCheck.StateModel.Lockstep
      Test.QuickCheck.StateModel.Lockstep.EnvF
      Test.QuickCheck.StateModel.Lockstep.GVar
  build-depends:
      -- quickcheck-dynamic requires ghc 8.10 minimum
      base       >= 4.14 && < 4.15
    , mtl        >= 2.2  && < 2.3
    , containers >= 0.6  && < 0.7
    , QuickCheck >= 2.14 && < 2.15

      -- TODO: Version bound to be determined
      -- We need https://github.com/input-output-hk/quickcheck-dynamic/pull/16
    , quickcheck-dynamic
  hs-source-dirs:
      src

test-suite test-quickcheck-lockstep
  import:
      lang
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  other-modules:
      Test.MockFS
      Test.MockFS.Mock
  default-extensions:
      DeriveGeneric
  build-depends:
      -- Version bounds determined by main lib
      base
    , containers
    , directory
    , filepath
    , mtl
    , QuickCheck
    , quickcheck-dynamic
    , quickcheck-lockstep
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , temporary
